      Instead of being listed in a warning dialog after opening a bib file, duplicate keys
      now trigger a dialog asking whether the user wants to resolve the duplicates.
    - Added check that ensures that application doesn't quit while a large save operation
      is still in progress. Shows wait message with cancel button.
    - Added apostrophe (') as illegal character in BibTeX keys.
    - Fixed bug in merging external changes - file would still be reported as modified
      externally after merging changes.
    - Fixed bug in Move/rename file link feature that could cause the wrong link to be
      stored for certain directory structures.
    - Fixed bug: curly braces can now be used in arguments to formatters. 
    - Fixed lockup bug when generating key for entries with crossref fields.
    - BibTeX strings are now resolved before attempting to (un)abbreviate journal names.
    - Modified [shorttitle] and [veryshorttitle] key generator markers so they consider
      a hyphen a word boundary, and remove punctuation characters (keep only numbers and
      letters).
2.6
    - Fixed IEEExplorer and ACM fetchers to adapt to web site changes.
    - Active preview (1 or 2) is now remembered.
    - Applied patch by Igor L. Chernyavsky. to prevent loss of entry selection after
      generating key.
    - Changed OpenDocument Spreadsheet export so the mimetype file is written correctly
      at the start of the zip file.
    - Fixed bug when importing preferences: custom export filters would not be updated
      after import.
    - Changed help page loading procedure so help pages can be loaded for plugin entry
      fetchers.
    - Made it possible to define customized entry types with either-or conditions on
      required fields, e.g. using a pseudo-field called "author/editor" will indicate
      that the entry requires either the "author" or the "editor" field set.
    - Fixed bug: entries of a customized type could be indicated as complete even if